travis yml added

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ jdk:
 
 script:
         - pushd cron4j-original && ant rel && popd
+        - pushd cron4j-mvn && mvn clean verify && popd
+        
